# ucp-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ucp_mcp_server/: __init__.py  __main__.py  models.py  server.py  ucp_client.py
tests/: __init__.py  conftest.py  test_checkout.py  test_complete.py  test_discovery.py  test_errors.py  test_integration.py
